# shim-rag-test-sample-python-1

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
docs/: bulk-seeding.md  domain-notes.md  integration-walkthrough.md  seeder-reference.md
examples/: sample-document.json  sample-ingestion-job.json
ingestion_utils/: __init__.py  bulk_seeder.py  cli.py  client.py  exporter.py  scenario.py  seed_data.py  seeder.py
tests/: test_seeder.py
